@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T16:00:47Z",
+  "timestamp" : "2024-01-11T08:00:52Z",
   "count_outdated" : 64,
   "uniques_outdated" : 48,
-  "count" : 71,
-  "uniques" : 54,
+  "count" : 72,
+  "uniques" : 55,
   "clones" : [
     {
       "timestamp": "2023-12-30T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
